[project]
name = "image-uploader"
version = "1.0.0"
description = "Image Uploader"
requires-python = ">=3.9.6"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line_length = 88
include = '\.pyi?$'

# flake8 does not suport pyproject.toml - look at .flake8

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
exclude = ['build', 'venv']